--- a/style.css
+++ b/style.css
@@ -1,44 +1,32 @@
 .menu span {
-  width: 100px;
-  height: 30px;
-  background-color: aqua;
   display: inline-block;
-  line-height: 30px;
-  text-align: center;
-}
-
-.menu {
-  position: fixed;
-}
-
-.menu span:hover {
-  background-color: red;
-}
-
-.menu ul {
-  list-style: none;
-}
-
-.menu ul li {
-  background: #262626;
   width: 100px;
   height: 30px;
-  line-height: 30px;
-  color: white;
+  background-color: red;
   text-align: center;
+  line-height: 30px;
   position: relative;
-  float: left;
-  border: solid 1px red;
 }
-
-.menu ul li:hover {
-  background: crimson;
-}
-
 .menu ul {
   display: none;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
 }
-
-.menu span:hover > ul {
+.menu ul li {
+  list-style: none;
+  background-color: aquamarine;
+  width: 100;
+}
+.menu ul li:hover {
+  background-color: brown;
+}
+.menu span:hover ul {
   display: block;
+}
+.menu span ul:hover {
+  display: block !important;
 }
