--- a/style.css
+++ b/style.css
@@ -1,44 +1,74 @@
-.menu span {
-  width: 100px;
-  height: 30px;
-  background-color: aqua;
-  display: inline-block;
-  line-height: 30px;
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #2b58ac;
 }
 
-.menu {
-  position: fixed;
+#signin-form {
+  width: 800px;
+  height: 400px;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.menu span:hover {
-  background-color: red;
+.box {
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  height: 350px;
+  /* text-align: center; */
+  background-color: white;
+  float: right;
 }
 
-.menu ul {
-  list-style: none;
-}
-
-.menu ul li {
-  background: #262626;
-  width: 100px;
-  height: 30px;
-  line-height: 30px;
-  color: white;
-  text-align: center;
-  position: relative;
-  float: left;
-  border: solid 1px red;
-}
-
-.menu ul li:hover {
-  background: crimson;
-}
-
-.menu ul {
-  display: none;
-}
-
-.menu span:hover > ul {
+.box input[type="text"],
+.box input[type="password"] {
+  border: 0;
+  background: none;
   display: block;
+  text-align: center;
+  border: 2px solid #3498db;
+  padding: 5px 119px;
+  outline: none;
+}
+
+.form-option {
+  padding-top: 20px;
+}
+
+#button {
+  border: 0;
+  background: #2b58ac;
+  display: block;
+  text-align: center;
+  border: 2px solid #3498db;
+  padding: 5px 181px;
+  outline: none;
+}
+
+.ml-74 a {
+  text-decoration: none;
+  color: black;
+  padding-left: 248px;
+}
+
+.box h1 {
+  color: #2b58ac;
+  text-transform: uppercase;
+  font-weight: 500;
+  text-align: center;
+}
+
+.signup-account {
+  padding-top: 62px;
+  text-align: center;
+}
+
+.image-login img {
+  float: left;
+  width: 400px;
+  height: 400px;
 }
